compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_comparable_constraints.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_comparable_constraints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
line 1 ok; line 2 ok; line 3 rejects Bool < Bool; line 4 rejects List<i64> < List<i64>
stderr:
<empty>
