compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_diagnostic_render.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_diagnostic_render.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
error:main.ml:line:expected expression
stderr:
<empty>
