compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_equality_constraints.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_equality_constraints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
line 1 ok; line 2 ok; line 3 rejects String == Bool; line 4 rejects (i64, String) == (i64, Bool)
stderr:
<empty>
