compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_frontend_pipeline_snapshot.snap
---
source: tests/fixtures.rs
assertion_line: 5104
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_frontend_pipeline_snapshot.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
2
16
2
2
2
2
6
4
stderr:
<empty>
