compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_imported_arrow_container_matching.snap
---
source: tests/fixtures.rs
assertion_line: 4050
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_imported_arrow_container_matching.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
old list: reject
new list: match
bad result: reject
variant: match
stderr:
<empty>
