compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_imported_record_pattern_tags.snap
---
source: tests/fixtures.rs
assertion_line: 1777
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_imported_record_pattern_tags.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
head:Syntax.token,tail:Syntax.token;entry
stderr:
<empty>
